--- a/repair.html
+++ b/repair.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=330">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=330" />
     <title>修理ステータス</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>社員対応状況(修理)</h1>
     <!-- action にGASのURLを記述する -->
-    <form method="get"
-        action="https://script.google.com/macros/s/AKfycbw8FtM1Me6dt7S6mHgIqpMU-gzTzQcBmX3yl9g9LWAQG7nlWw7NdG2iKd84SL6Juqin7g/exec">
+    <form
+      method="get"
+      action="https://script.google.com/macros/s/AKfycbwrXUGpC00_ZAbBrZdi8C6nMvn0AVW_cTfNrz_xW6iWTJ5qj1rW95PHWc4kkrpFp8gpLw/exec"
+    >
+      <!-- action="https://script.google.com/macros/s/AKfycbw8FtM1Me6dt7S6mHgIqpMU-gzTzQcBmX3yl9g9LWAQG7nlWw7NdG2iKd84SL6Juqin7g/exec"> -->
+      <p>
+        ID:
+        <label><input type="text" name="id" /></label>
+      </p>
 
-        <p>ID:
-            <label><input type="text" name="id"></label>
-        </p>
+      <p>対応状況:</p>
+      <label><input type="radio" name="status" value="対応中" />対応中</label
+      ><br />
+      <label
+        ><input type="radio" name="status" value="対応済み" />対応済み</label
+      ><br />
 
-
-
-        <p>対応状況:</p>
-            <label><input type="radio" name="status" value="対応中">対応中</label><br>
-            <label><input type="radio" name="status" value="対応済み">対応済み</label><br>
-
-
-
-
-
-        <p><input type="submit" value="送信"></p>
-
+      <p><input type="submit" value="送信" /></p>
     </form>
-</body>
-
+  </body>
 </html>
