chore: add message input

--- a/repair.html
+++ b/repair.html
@@ -26,6 +26,11 @@
         ><input type="radio" name="status" value="対応済み" />対応済み</label
       ><br />
 
+      <p>
+        お客様へのメッセージ（任意）:
+        <label><input type="text" name="message" /></label>
+      </p>
+
       <p><input type="submit" value="送信" /></p>
     </form>
   </body>
